# gobby-cli

./: .coderabbit.yaml  .gitignore  .markdownlint.json  .markdownlint.strict.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Research arxiv articles documenting improvements i.md  fable-repo-analysis.md
crates/gcode/: Cargo.toml  README.md  build.rs
crates/gcode/assets/: SKILL.md
crates/gcode/assets/import_roots/: elixir_dependency_roots.json  ruby_require_roots.json
crates/gcode/contract/: gcode.contract.json
crates/gcode/src/: cli.rs  config.rs  contract.rs  db.rs  dispatch.rs  falkor.rs  freshness.rs  git.rs  index_lock.rs  lib.rs  main.rs  models.rs  neo4j.rs  output.rs  progress.rs  project.rs  savings.rs  schema.rs  secrets.rs  setup.rs  skill.rs  test_env.rs  utils.rs  visibility.rs
crates/gcode/src/cli/: symbol_at_tests.rs  tests.rs
crates/gcode/src/commands/: codewiki.rs  embeddings_doctor.rs  graph.rs  grep.rs  index.rs  init.rs  mod.rs  scope.rs  search.rs  setup.rs  status.rs  summary.rs  symbol_at.rs  symbols.rs  token_budget.rs  vector.rs
crates/gcode/src/config/: context.rs  services.rs  tests.rs
crates/gcode/src/db/: mod.rs  queries.rs  resolution.rs
crates/gcode/src/dispatch/: tests.rs
crates/gcode/src/graph/: code_graph.rs  mod.rs  report.rs  typed_query.rs
crates/gcode/src/index/: api.rs  api_tests.rs  chunker.rs  hasher.rs  import_resolution.rs  indexer.rs  languages.rs  mod.rs  parser.rs  security.rs  semantic.rs  walker.rs
crates/gcode/src/projection/: mod.rs  sync.rs
crates/gcode/src/search/: fts.rs  graph_boost.rs  mod.rs  rrf.rs  semantic.rs
crates/gcode/src/setup/: contracts.rs  ddl.rs  identifiers.rs  postgres.rs  tests.rs  types.rs
crates/gcode/src/vector/: code_symbols.rs  mod.rs
crates/gcode/tests/: contract.rs  graph_standalone.rs  projection_stale.rs  projection_standalone.rs  release_workflows.rs  vector_projection.rs  workflow_security.rs
crates/gcode/tests/common/: http.rs  mod.rs
crates/gcode/tests/graph_standalone/: local_c_cpp.rs  local_csharp_kotlin_ruby.rs  local_js_default.rs  local_php_swift_dart_elixir.rs  local_python_go_java.rs  local_rust.rs  local_shell_scala_lua_objc.rs  phantom_targets.rs  smoke.rs  support.rs
crates/gcore/: Cargo.toml
crates/gcore/assets/: docker-compose.services.yml
crates/gcore/assets/postgres-pgsearch/: Dockerfile  version.json
crates/gcore/src/: ai_context.rs  ai_types.rs  bootstrap.rs  cli_contract.rs  codewiki_contract.rs  config.rs  context.rs  daemon_url.rs  degradation.rs  falkor.rs  graph_analytics.rs  indexing.rs  layered_config.rs  lib.rs  libpq.rs  local_backend.rs  machine.rs  markdown.rs  postgres.rs  project.rs  provisioning.rs  qdrant.rs  search.rs  secrets.rs  setup.rs  test_http.rs  token_budget.rs
crates/gcore/src/ai/: daemon.rs  embeddings.rs  mod.rs  probe.rs  text.rs  transcription.rs  vision.rs
crates/gcore/src/config/: mod.rs  resolve.rs  tests.rs  types.rs
crates/gcore/src/graph_analytics/: leiden.rs
crates/gcore/src/provisioning/: bootstrap.rs  docker.rs  hub.rs  mod.rs  tests.rs
crates/gcore/src/qdrant/: naming.rs  tests.rs
crates/gcore/tests/: public_boundary.rs
crates/ghook/: Cargo.toml  README.md
crates/ghook/schemas/: diagnose-output.v1.schema.json  diagnose-output.v2.schema.json  inbox-envelope.v1.schema.json
crates/ghook/src/: action.rs  args.rs  cli_config.rs  detach.rs  diagnose.rs  diagnostics.rs  dispatch.rs  envelope.rs  json_value.rs  main.rs  output.rs  planned_shutdown.rs  runtime.rs  source.rs  statusline.rs  terminal_context.rs  test_http.rs  transport.rs
crates/ghook/tests/: contract.rs  inbox_fallback.rs
crates/gloc/: Cargo.toml  config.yaml
crates/gloc/src/: backend.rs  config.rs  exec.rs  main.rs
crates/gloc/tests/: url_override.rs
crates/gobby-core/: Cargo.toml
crates/gobby-core/src/: lib.rs
crates/gsqz/: Cargo.toml  README.md  SKILL.md  config.yaml
crates/gsqz/src/: command_split.rs  compressor.rs  config.rs  daemon.rs  main.rs
crates/gsqz/src/primitives/: dedup.rs  group.rs  match_output.rs  mod.rs  prose.rs  replace.rs  truncate.rs
crates/gwiki/: Cargo.toml  README.md
crates/gwiki/assets/skills/: audit.md  compile.md  query.md  research.md
crates/gwiki/contract/: gwiki.contract.json
crates/gwiki/src/: api.rs  audit.rs  benchmark.rs  citations.rs  code_graph.rs  collect.rs  compile.rs  contract.rs  credibility.rs  daemon.rs  document.rs  error.rs  events.rs  explainer.rs  exports.rs  falkor_graph.rs  frontmatter.rs  graph.rs  health.rs  indexer.rs  lib.rs  librarian.rs  links.rs  lint.rs  log.rs  main.rs  main_tests.rs  markdown.rs  media.rs  models.rs  normalize.rs  obsidian.rs  output.rs  paths.rs  provenance.rs  registry.rs  research.rs  research_loop.rs  runner.rs  schema.rs  (+12 more)
crates/gwiki/src/ai/: chunk.rs  clients.rs  mod.rs  translate.rs
crates/gwiki/src/audit/: claims.rs  render.rs  tests.rs
crates/gwiki/src/commands/: ask.rs  audit.rs  backlinks.rs  benchmark.rs  citation_quality.rs  collect.rs  compile.rs  export.rs  graph.rs  graph_context.rs  health.rs  index.rs  init.rs  librarian.rs  lint.rs  mod.rs  normalize.rs  purge.rs  read.rs  refresh.rs  research.rs  review_report.rs  search.rs  session_sync.rs  setup.rs  sources.rs  status.rs  trust.rs  vault_tools.rs
crates/gwiki/src/compile/: collect.rs  index.rs  mod.rs  render.rs  tests.rs
crates/gwiki/src/exports/: assets.rs  graph.rs  tests.rs  write.rs
crates/gwiki/src/falkor_graph/: boost.rs  code_edges.rs  query.rs  sync.rs  tests.rs  wiki_facts.rs
crates/gwiki/src/graph/: analytics.rs  context.rs  export.rs  mod.rs
crates/gwiki/src/ingest/: audio.rs  document.rs  file.rs  git.rs  image.rs  mediawiki.rs  mod.rs  pdf.rs  session.rs  session_archive.rs  url.rs  video.rs  wayback.rs
crates/gwiki/src/lint/: diagrams.rs
crates/gwiki/src/research/: mod.rs  model.rs  notes.rs  outcome.rs  storage.rs  tests.rs
crates/gwiki/tests/: cli_collect.rs  cli_contract.rs  cli_export.rs  cli_init.rs  cli_output.rs  cli_parse.rs  cli_search.rs  cli_smoke.rs  cli_sources.rs
(+1878 files in other folders)
