[workspace]
members = ["crates/gcode", "crates/gcore", "crates/ghook", "crates/gsqz", "crates/gloc"]
resolver = "3"

[profile.release]
lto = true
strip = true

[profile.release.package.gobby-code]
opt-level = 3

[profile.release.package.gobby-squeeze]
opt-level = "z"

[profile.release.package.gobby-local]
opt-level = "z"

[profile.release.package.gobby-hooks]
opt-level = "z"
