[package]
name = "gobby-code"
version = "0.9.9"
edition = "2024"
rust-version = "1.88"
authors = ["Josh Wilhelmi <hello@gobby.ai>"]
description = "Fast Rust CLI for Gobby's code index — AST-aware search, symbol navigation, and dependency graph"
license = "Apache-2.0"
repository = "https://github.com/GobbyAI/gobby-cli"
homepage = "https://gobby.ai"
readme = "README.md"
keywords = ["code-search", "ast", "code-index", "developer-tools", "gobby"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "gobby_code"
path = "src/lib.rs"

[[bin]]
name = "gcode"
path = "src/main.rs"

[dependencies]
# Internal
gobby-core = { path = "../gcore", version = "0.3.0", features = ["postgres", "falkor", "qdrant", "search", "indexing", "local_backend", "ai"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
toml = "1"

# Database
postgres = "0.19"

# Graph/vector backends
urlencoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
base64 = "0.22"

# Tree-sitter (core + language grammars)
tree-sitter = "0.25"
# Tier 1: Primary languages
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24.2"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"
# Tier 2: Additional languages
tree-sitter-dart = "0.2"
tree-sitter-elixir = "0.3"
# Tier 3: Data formats
tree-sitter-json = "0.23"
tree-sitter-yaml = "0.7"

# Iterator
streaming-iterator = "0.1"

# Utilities
glob = "0.3"
regex = "1"
rayon = "1"
shlex = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v5"] }
ignore = "0.4"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
anyhow = "1"
log = "0.4"
ureq = { version = "2", features = ["json"] }
wait-timeout = "0.2"

# Secret resolution (Fernet decryption of gobby secrets)
fernet = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"

# Temp files (for tests)
tempfile = "3"

[dev-dependencies]
serial_test = "3"
temp-env = "0.3"
