[package]
name = "gobby-core"
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
authors = ["Josh Wilhelmi <hello@gobby.ai>"]
description = "Shared foundation primitives for Gobby CLI tools"
license = "Apache-2.0"
repository = "https://github.com/GobbyAI/gobby-cli"
homepage = "https://gobby.ai"
keywords = ["gobby", "cli"]
categories = ["development-tools"]

[features]
default = []
postgres = ["dep:postgres", "dep:postgres-types", "dep:postgres-openssl", "dep:openssl", "dep:base64", "dep:fernet", "dep:pbkdf2", "dep:sha2"]
falkor = ["dep:falkordb", "dep:urlencoding"]
qdrant = ["dep:reqwest", "dep:urlencoding"]
indexing = ["dep:ignore", "dep:sha2"]
search = []
local-backend = ["dep:ureq"]
ai = ["dep:reqwest", "dep:base64", "dep:bytes", "dep:httpdate", "dep:rand", "local-backend", "reqwest/multipart"]
full = ["postgres", "falkor", "qdrant", "indexing", "search", "ai"]

[dependencies]
anyhow = "1"
dirs = "6"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
thiserror = "2"

postgres = { version = "0.19", optional = true }
postgres-types = { version = "0.2", optional = true }
postgres-openssl = { version = "0.5", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
falkordb = { version = "0.2", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
base64 = { version = "0.22", optional = true }
fernet = { version = "0.2", optional = true }
pbkdf2 = { version = "0.12", features = ["simple"], optional = true }
bytes = { version = "1", optional = true }
httpdate = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
ureq = { version = "2", optional = true }
ignore = { version = "0.4", optional = true }
sha2 = { version = "0.10", optional = true }
urlencoding = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
