[package]
name = "gobby-core"
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
authors = ["Josh Wilhelmi <hello@gobby.ai>"]
description = "Shared foundation primitives for Gobby CLI tools"
license = "Apache-2.0"
repository = "https://github.com/GobbyAI/gobby-cli"
homepage = "https://gobby.ai"
keywords = ["gobby", "cli"]
categories = ["development-tools"]

[features]
default = []
postgres = ["dep:postgres", "dep:postgres-types", "dep:postgres-openssl", "dep:openssl", "dep:pbkdf2", "dep:sha2"]
falkor = ["dep:falkordb", "dep:urlencoding"]
qdrant = ["dep:urlencoding"]
indexing = ["dep:ignore", "dep:sha2"]
search = []
# Enables the in-memory graph analytics module; no optional dependency is needed.
graph-analytics = []
# Compatibility aliases; AI transport/probe code is required core behavior.
local-backend = []
ai = []
full = ["postgres", "falkor", "qdrant", "indexing", "search", "graph-analytics", "ai"]

[dependencies]
anyhow = "1"
dirs = "6"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
thiserror = "2"

postgres = { version = "0.19", optional = true }
postgres-types = { version = "0.2", optional = true }
# PostgreSQL TLS still uses postgres-openssl/native-tls connectors.
postgres-openssl = { version = "0.5", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
falkordb = { version = "0.2", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
base64 = "0.22"
fernet = "0.2.2"
pbkdf2 = { version = "0.13.0", features = ["hmac"], optional = true }
bytes = "1"
httpdate = "1"
rand = "0.8"
ureq = "2"
ignore = { version = "0.4", optional = true }
sha2 = { version = "0.11", optional = true }
urlencoding = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
