[package]
name = "gobby-hooks"
version = "0.6.2"
edition = "2024"
rust-version = "1.88"
authors = ["Josh Wilhelmi <hello@gobby.ai>"]
description = "Sandbox-tolerant hook dispatcher for Gobby — enqueue-first, Rust port of the Python hook_dispatcher. Ships the `ghook` binary."
license = "Apache-2.0"
repository = "https://github.com/GobbyAI/gobby-cli"
homepage = "https://gobby.ai"
readme = "README.md"
keywords = ["gobby", "cli", "hooks"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ghook"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
gobby-core = { path = "../gcore", version = "0.6.0" }
libc = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Deliberately ureq, never reqwest: tiny binaries stay off the async HTTP
# stack (gcore's reqwest transport lives behind its `ai` feature).
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
jsonschema = { version = "0.17", default-features = false }
temp-env = "0.3.6"
tempfile = "3"
