[package]
name = "gobby-local"
version = "0.1.5"
edition = "2024"
rust-version = "1.88"
authors = ["Josh Wilhelmi <hello@gobby.ai>"]
description = "Auto-detect local LLM backends and launch AI CLI tools"
license = "Apache-2.0"
repository = "https://github.com/GobbyAI/gobby-cli"
homepage = "https://gobby.ai"
keywords = ["cli", "llm", "local-ai", "ollama", "lmstudio"]
categories = ["command-line-utilities"]

[[bin]]
name = "gloc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
# Deliberately ureq, never reqwest: tiny binaries stay off the async HTTP
# stack (gcore's reqwest transport lives behind its `ai` feature).
ureq = { version = "2", features = ["json"] }
gobby-core = { path = "../gcore", version = "0.5.0", default-features = false, features = ["local-backend"] }
