[package]
name = "gobby-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Josh Wilhelmi <hello@gobby.ai>"]
description = "Shared primitives for Gobby CLI tools — project root resolution, bootstrap config, daemon URL helpers"
license = "Apache-2.0"
repository = "https://github.com/GobbyAI/gobby-cli"
homepage = "https://gobby.ai"
keywords = ["gobby", "cli"]
categories = ["development-tools"]

[dependencies]
anyhow = "1"
serde_json = "1"
