[package]
name = "gobby-squeeze"
version = "0.4.6"
edition = "2024"
rust-version = "1.88"
authors = ["Josh Wilhelmi <hello@gobby.ai>"]
description = "YAML-configurable output compressor for LLM token optimization"
license = "Apache-2.0"
repository = "https://github.com/GobbyAI/gobby-cli"
homepage = "https://gobby.ai"
readme = "README.md"
keywords = ["cli", "compression", "llm", "token-optimization"]
categories = ["command-line-utilities"]

[[bin]]
name = "gsqz"
path = "src/main.rs"

[features]
default = ["gobby"]
gobby = ["ureq", "serde_json", "dep:gobby-core"]

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = { package = "yaml_serde", version = "0.10.4" }

# Gobby-specific (daemon HTTP integration)
gobby-core = { path = "../gcore", version = "0.4.0", default-features = false, optional = true }
ureq = { version = "2", features = ["json"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
temp-env = "0.3"
tempfile = "3"
