[package]
name = "gobby-wiki"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Josh Wilhelmi <hello@gobby.ai>"]
description = "Gobby wiki CLI shell"
license = "Apache-2.0"
repository = "https://github.com/GobbyAI/gobby-cli"
homepage = "https://gobby.ai"
keywords = ["gobby", "wiki", "cli"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["rustls", "documents", "ai"]
ai = ["gobby-core/ai"]
documents = ["dep:calamine", "dep:quick-xml", "dep:zip"]
rustls = ["dep:reqwest"]

[lib]
name = "gobby_wiki"
path = "src/lib.rs"

[[bin]]
name = "gwiki"
path = "src/main.rs"

[dependencies]
gobby-core = { path = "../gcore", version = "0.3.0", features = ["postgres", "falkor", "qdrant", "indexing", "search"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
postgres = "0.19"
# ureq handles daemon/research calls; optional reqwest is kept for rustls embedding requests.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
toml = "1"
ureq = "2"
html-escape = "0.2"
dirs = "6"
fs4 = "1.1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
scraper = "0.27"
log = "0.4"
percent-encoding = "2"
tempfile = "3"
calamine = { version = "0.30", optional = true }
quick-xml = { version = "0.38", optional = true }
zip = { version = "4", default-features = false, features = ["deflate"], optional = true }
